--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,10 @@
 (executable
  (name test)
- (modes js)
- (js_of_ocaml (flags --pretty))
+ (modes js byte exe)
+ (js_of_ocaml
+   (flags --pretty --source-map))
  (libraries integers integers_stubs_js))
+
+(alias
+  (name all)
+  (deps index.html test.ml))
